...
    LazyRow(
        modifier = Modifier
            .fillMaxWidth()
            .padding(
                vertical = 14.dp,
            )
            .testTag("story_list"),
        contentPadding = PaddingValues(horizontal = 14.dp)
    ) {
        itemsIndexed(tvViewModel.tvs){ index, tv ->
            Surface(
                modifier = Modifier
                    .padding(end = 12.dp)
...
