...
            }
            Line()
            LazyColumn(
                modifier = Modifier
                    .fillMaxWidth()
                    .fillMaxHeight()
                    .testTag("movie_list"),
                state = scrollState,
            ){
                itemsIndexed( movieViewModel.movies){ index, movie ->
                    if (
                        index == movieViewModel.movies.count() - 2
                        && movieViewModel.page < movieViewModel.maxPage
...
